--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
+{% load static tailwind_tags %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% tailwind_css %}
+    <script defer src="{% static "js/main.js" %}"></script>
+    
 </head>
 <body>
+    {% include "layout/header.html" %}
     {% block content %}{% endblock content %}
+    {% include "layout/footer.html" %}
 </body>
 </html>
