added dynamic page for authors

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     {% include "layout/header.html" %}
-    {% block content %}{% endblock content %}
+    <div class="">
+        {% block content %}{% endblock content %}
+    </div>
     {% include "layout/footer.html" %}
 </body>
 </html>
