added main tag to base html structure

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     {% include "layout/header.html" %}
-    <div class="">
+    <main class="max-w-7xl mx-auto mt-10 mb-20 px-3 md:px-1">
         {% block content %}{% endblock content %}
-    </div>
+    </main>
     {% include "layout/footer.html" %}
 </body>
 </html>
