added title & meta desc. in categories base.

--- a/templates/authors/index.html
+++ b/templates/authors/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block content %}
+{% block title %}Authors{% endblock title %}
+{% block meta_desc %}Delve into the minds of literary giants and discover timeless quotes that resonate with the human experience.{% endblock meta_desc %}
+{% block base_content %}
 
 
 <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
@@ -16,4 +18,4 @@
 {% for i in paginator %}
 {{i}}
 {% endfor %}
-{% endblock content %}
+{% endblock base_content %}
