added dynamic meta description to individual pages

--- a/templates/authors/author_individual.html
+++ b/templates/authors/author_individual.html
@@ -1,2 +1,3 @@
 {% extends "authors/index.html" %}
-{% block title %}{{author_name}}{% endblock title %}
+{% block title %}Quotes by {{author_name}}{% endblock title %}
+{% block meta_desc %}Discover the essence of {{author_name}}'s philosophy and insights through a curated selection of memorable quotes.{% endblock meta_desc %}
