--- a/templates/topics/topic_individual.html
+++ b/templates/topics/topic_individual.html
@@ -1,2 +1,3 @@
 {% extends "topics/index.html" %}
-{% block title %}{{topic_name}}{% endblock title %}
+{% block title %}{{topic_name}} Quotes{% endblock title %}
+{% block meta_desc %}Immerse yourself in the beauty of words that capture the essence of {{topic_name}}, offering moments of reflection and motivation{% endblock meta_desc %}
