--- a/templates/authors/author_individual.html
+++ b/templates/authors/author_individual.html
@@ -1,3 +1,8 @@
 {% extends "authors/index.html" %}
 {% block title %}Quotes by {{author_name}}{% endblock title %}
 {% block meta_desc %}Discover the essence of {{author_name}}'s philosophy and insights through a curated selection of memorable quotes.{% endblock meta_desc %}
+{% block base_content %}
+all quotes by {{author_name}}
+-----
+
+{% endblock base_content %}
