displayed quotes by authors on their own pages

--- a/templates/authors/author_individual.html
+++ b/templates/authors/author_individual.html
@@ -4,5 +4,7 @@
 {% block base_content %}
 all quotes by {{author_name}}
 -----
-
+{% for each in all_quotes %}
+{{each|linebreaks}}
+{% endfor %}
 {% endblock base_content %}
