topic individual and header translations complete.

--- a/templates/authors/index.html
+++ b/templates/authors/index.html
@@ -13,7 +13,7 @@
 <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
     {% for each in data.items %}
     <ul class="list list-flush">
-        {{each.0| title}} {% trans "Authors" %}
+        <div class="">{{each.0|title}} {% trans "Authors" %}</div>
         {% for title,url in each.1.items %}
         <li class="list-item"><a href="{{url}}/">{{title|title}}</a></li>
         {% endfor %}
