added hindi translations. formatted templates.

--- a/templates/authors/index.html
+++ b/templates/authors/index.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}
-    {% trans "Authors" %}
-{% endblock title %}
+{% block title %}{% trans "Authors" %}{% endblock title %}
 
-{% block meta_desc %}
-    {% trans "Delve into the minds of literary giants and discover timeless quotes that resonate with the human experience." %}
-{% endblock meta_desc %}
+{% block meta_desc %}{% trans "Delve into the minds of literary giants and discover timeless quotes that resonate with the human experience." %}{% endblock meta_desc %}
+
 {% block base_content %}
 
 
