--- a/templates/topics/index.html
+++ b/templates/topics/index.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}
-    {% trans "Topics" %}
-{% endblock title %}
-{% block meta_desc %}
-    {% trans "Explore a vast collection of quotes organized by topic, featuring words of wisdom from renowned authors, historical figures, and everyday people." %}
-{% endblock meta_desc %}
+{% block title %}{% trans "Topics" %}{% endblock title %}
+
+{% block meta_desc %}{% trans "Explore a vast collection of quotes organized by topic, featuring words of wisdom from renowned authors, historical figures, and everyday people." %}{% endblock meta_desc %}
 
 {% block base_content %}
 
