added homepage translations

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,2 +1,4 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Discover Inspirational Quotes" %}{% endblock title %}
+{% block meta_desc %}{% trans "Explore profound insights and timeless wisdom through our curated collection of quotes from renowned personalities worldwide." %}{% endblock meta_desc %}
