--- a/templates/quote.html
+++ b/templates/quote.html
@@ -3,6 +3,22 @@
 {% block meta_desc %}{{quote|truncatechars:150}}{% endblock meta_desc %}
 {% block base_content %}
 
-{{quote}}
-"""Quote By:{{author}}"""
+<div class="grid grid-cols-1 md:grid-cols-2 grid-rows-2 gap-6">
+   <div class="p-10">Image here</div>
+   <div class="p-10 order-3 md:order-2">Related Information</div>
+   <div class="md:p-10 order-2 md:order-3">
+      <div class="card">
+         <div class="card-body">
+           <p class="md:p-4 md:text-2xl text-lg text-justify">{{quote}}</p>
+           <div class="text-center md:hidden">Share on:</div>
+         </div>
+         <div class="justify-between card-footer">
+           <div class="hidden md:block">Share on:</div>
+           <div class="text-primary">{{author}}</div>
+         </div>
+       </div>
+   </div>
+   <div class="p-10 order-4 md:order-4">custom Data</div>
+</div>
+    
 {% endblock base_content %}
