--- a/templates/quote.html
+++ b/templates/quote.html
@@ -1,10 +1,31 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}{{author}} | {{quote|truncatewords:6}}{% endblock title %}
 {% block meta_desc %}{{quote|truncatechars:150}}{% endblock meta_desc %}
 {% block base_content %}
 
 <div class="grid grid-cols-1 md:grid-cols-2 grid-rows-2 gap-6">
-   <div class="p-2">Image here</div>
+   <div class="p-2">
+      <div class="card">
+         <div class="card-body">
+            <div>
+               <div class="flex flex-col items-center">
+                  <!-- Large Image -->
+                  <img src="{% get_media_prefix %}{{images.0}}" class="rounded-lg w-full mb-4" alt="Large Image">
+              
+                  <!-- Three Small Images -->
+                  <div class="flex overflow-y-auto">
+                      <img src="{% get_media_prefix %}{{images.1}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 1">
+                      <img src="{% get_media_prefix %}{{images.2}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 2">
+                      <img src="{% get_media_prefix %}{{images.3}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 3">
+                      <img src="{% get_media_prefix %}{{images.4}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 3">
+                  </div>
+              </div>     
+         
+            </div>
+         </div>
+      </div>
+   </div>
 
    <div class="p-2 order-3 md:order-2">
       <div class="border-b-2">Topics you may be interested in:</div>
