fixed 404s on authors. Now fixing duplicates

--- a/templates/authors/author_individual.html
+++ b/templates/authors/author_individual.html
@@ -9,7 +9,7 @@
 
 <div class="grid grid-cols-1 gap-3 md:grid-cols-3">
         
-    {% for each in all_quotes %}
+    {% for each in quotes_collection %}
         <a class="card" href="{% url "Quote_detail" quote_url=each.1 %}">
             <div class="card-body">
                 <p>{{each.0}}</p>
