--- a/templates/quote.html
+++ b/templates/quote.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}{{author}} | {{quote|truncatewords:6}}{% endblock title %}
+{% block title %}{{author_title}} | {{quote|truncatewords:6}}{% endblock title %}
 {% block meta_desc %}{{quote|truncatechars:150}}{% endblock meta_desc %}
 {% block base_content %}
 
@@ -25,12 +25,12 @@
 
    <div class="p-2 order-3 md:order-2">
       <div class="border-b-2">Topics you may be interested in:</div>
-      {% for topic in topic_next_five_records %}
-         <a href="{% url "Topic_detail" topic_name=topic.0.1 %}" class="btn btn-light-primary">{{topic.0.0}}</a>
+      {% for topic in topics_data %}
+         <a href="{% url "Topic_detail" topic_name=topic.topics %}" class="btn rounded-full btn-light-primary">{{topic.topics__topic}}</a>
       {% endfor %}
       <div class="border-b-2">Authors you may be interested in:</div>
-      {% for author in author_next_five_records %}
-         <a href="{% url "Author_detail" author_name=author.0.1 %}" class="btn btn-light-primary">{{author.0.0}}</a>     
+      {% for author in authors_data %}
+         <a href="{% url "Author_detail" author_name=author.author %}" class="btn rounded-full btn-light-primary">{{author.author__author}}</a>     
       {% endfor %}
       <div>
       </div>
@@ -49,7 +49,7 @@
          </div>
 
          <div class="justify-between card-footer">
-            <a class="btn btn-light-primary btn-sm" href="{% url "Author_detail" author_name=author_slug %}">{{author}}</a>
+            <a class="btn btn-light-primary btn-sm" href="{% url "Author_detail" author_name=author %}">{{author_title}}</a>
             <div class="hidden md:block">
                <button class="btn btn-icon btn-twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></button>
                <button class="btn btn-icon btn-instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></button>
