--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -23,6 +23,7 @@
         <div class="hidden space-x-1 md:inline-flex">
           <a href="{% url "topics" %}" class="btn btn-sm btn-link">{% trans "Topics" %}</a>
           <a href="{% url "authors" %}" class="btn btn-sm btn-link">{% trans "Authors" %}</a>
+          <a href="{% url "qotd" %}" class="btn btn-sm btn-link">{% trans "Quote of the Day" %}</a>
           {% comment %} <a href="#" class="btn btn-sm btn-link">Blog</a>
           <a href="#" class="btn btn-sm btn-link">Company</a>
           <a href="#" class="btn btn-sm btn-link">Sign in</a> {% endcomment %}
@@ -87,8 +88,8 @@
             <a href="{% url "topics" %}" class="w-full btn btn-link">{% trans "Topics" %}</a>
             <a href="{% url "authors" %}" class="w-full btn btn-link">{% trans "Authors" %}</a>
             <a href="{% url "contact" %}" class="w-full btn btn-link">Contact</a>
-            {% comment %} <a href="#" class="w-full btn btn-link">Company</a>
-            <a href="#" class="w-full btn btn-link">Sign in</a> {% endcomment %}
+            <a href="{% url "qotd" %}" class="w-full btn btn-link">{% trans "Quote of the Day" %}</a>
+            {% comment %} <a href="#" class="w-full btn btn-link">Sign in</a> {% endcomment %}
           </div>
         </div>
       </div>
