--- a/templates/quote.html
+++ b/templates/quote.html
@@ -2,21 +2,45 @@
 {% load static %}
 {% block title %}{{author_title}} | {{quote|truncatewords:6}}{% endblock title %}
 {% block meta_desc %}{{quote|truncatechars:150}}{% endblock meta_desc %}
-{% block base_content %}
 
+{% block custom_css_js %}
+   <script src="{% static "js/fancybox.umd.js" %}"></script>
+
+   <link rel="stylesheet" href="{% static "css/fancybox.css" %}"/>
+
+{% endblock custom_css_js %}
+
+{% block base_content %}
 <div class="grid grid-cols-1 md:grid-cols-2 grid-rows-2 gap-6">
    <div class="p-2">
       <div class="card">
          <div class="card-body">
             <div class="flex flex-col items-center">
+               <a class="rounded-lg w-full mb-4" href="{% get_media_prefix %}{{images.0}}" data-fancybox="gallery" >
+                  <img class="w-full h-auto rounded-lg" src="{% get_media_prefix %}{{images.0}}" alt="Large Image">
+               </a> 
+               <div class="flex justify-between">
+                  {% for i in images|slice:4 %}
+                     <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{i}}" data-fancybox="gallery">
+                       <img class="w-full h-auto rounded-md" src="{% get_media_prefix %}{{i}}" alt="Small Image">
+                     </a>
+                  {% endfor %}
+                  {% comment %} <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{images.1}}" data-fancybox="gallery" >
 
-               <img src="{% get_media_prefix %}{{images.0}}" class="rounded-lg w-full mb-4" alt="Large Image">
+                     <img src="{% get_media_prefix %}{{images.1}}" alt="Small Image 1">
+                  </a>
+                  <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{images.2}}" data-fancybox="gallery" >
 
-               <div class="flex overflow-y-auto">
-                  <img src="{% get_media_prefix %}{{images.1}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 1">
-                  <img src="{% get_media_prefix %}{{images.2}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 2">
-                  <img src="{% get_media_prefix %}{{images.3}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 3">
-                  <img src="{% get_media_prefix %}{{images.4}}" class="rounded-md w-1/4 mx-0.5" alt="Small Image 3">
+                     <img src="{% get_media_prefix %}{{images.2}}" alt="Small Image 2">
+                  </a>
+                  <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{images.3}}" data-fancybox="gallery" >
+
+                     <img src="{% get_media_prefix %}{{images.3}}" alt="Small Image 3">
+                  </a>
+                  <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{images.4}}" data-fancybox="gallery" >
+                     
+                     <img src="{% get_media_prefix %}{{images.4}}" alt="Small Image 3">
+                  </a> {% endcomment %}
                </div>
             </div>     
          </div>
@@ -94,4 +118,17 @@
    {% endfor %}
 
 </div>
+<script>
+   Fancybox.bind("[data-fancybox]", {
+      hideScrollbar: true,
+      Toolbar: {
+         display: {
+           left: ["infobar"],
+           middle: [],
+           right: ["slideshow", "download", "thumbs", "close"],
+         },
+       },
+   });
+   
+ </script>
 {% endblock base_content %}
