--- a/templates/quote.html
+++ b/templates/quote.html
@@ -16,13 +16,13 @@
       <div class="card">
          <div class="card-body">
             <div class="flex flex-col items-center">
-               <a class="rounded-lg w-full mb-4" href="{% get_media_prefix %}{{images.0}}" data-fancybox="gallery" >
-                  <img class="w-full h-auto rounded-lg" src="{% get_media_prefix %}{{images.0}}" alt="Large Image">
+               <a class="rounded-lg w-full mb-4" href="{% get_media_prefix %}{{main_image}}" data-fancybox="gallery" >
+                  <img class="w-full h-auto rounded-lg" src="{% get_media_prefix %}{{main_image}}" alt="Large Image">
                </a> 
                <div class="flex justify-between">
-                  {% for i in images|slice:"1:5" %}
+                  {% for i,j in images %}
                      <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{i}}" data-fancybox="gallery">
-                       <img class="w-full h-auto rounded-md" src="{% get_media_prefix %}{{i}}" alt="Small Image">
+                       <img class="w-full h-auto rounded-md" src="{% get_media_prefix %}{{j}}" alt="Small Image">
                      </a>
                   {% endfor %}
                   {% comment %} <a class="rounded-md w-1/4 mx-0.5" href="{% get_media_prefix %}{{images.1}}" data-fancybox="gallery" >
