--- a/templates/quote.html
+++ b/templates/quote.html
@@ -15,7 +15,7 @@
    <div class="p-2">
       <div class="card">
          <div class="card-body">
-            <div class="flex flex-col items-center">
+            <div class="flex flex-col">
                <a class="rounded-lg w-full mb-4" href="{% get_media_prefix %}{{main_image}}" data-fancybox="gallery" >
                   <img class="w-full h-auto rounded-lg" src="{% get_media_prefix %}{{main_image}}" alt="Large Image">
                </a> 
